--- a/frontend/.jshintrc
+++ b/frontend/.jshintrc
@@ -2,7 +2,8 @@
   "predef": {
     "document": true,
     "window": true,
-    "FrontendENV": true
+    "FrontendENV": true,
+    "moment": true
   },
   "browser" : true,
   "boss" : true,
