--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,6 +13,7 @@
     "ember-qunit-notifications": "^0.0.1",
     "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2",
     "bootstrap": "~3.1.1",
-    "moment": "~2.7.0"
+    "moment": "~2.7.0",
+    "rails-csrf": "0.0.4"
   }
 }
